--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -206,14 +206,14 @@ ja:
     pm: 午後
   title:
     names:
-    - 金城鉄壁真顔人
-    - 鉄壁の真顔人
-    - 壁の真顔人
-    - ニッコリさん
-    - ゲラゲラ星人
+      gold: 金城鉄壁真顔人
+      iron: 鉄壁の真顔人
+      soil: 土壁の真顔人
+      smile: ニッコリさん
+      laugh: ゲラゲラ星人
     tweet_text:
-    - 何を見ても、何を聞いても笑わない。非の打ち所の無い素晴らしい忍耐力の持ち主です。
-    - すごい忍耐力
-    - まずまずの忍耐力
-    - 結構笑いやすい
-    - よく笑いましたね
+      gold: 何を見ても、何を聞いても笑わない。非の打ち所の無い素晴らしい忍耐力の持ち主です。
+      iron: すごい忍耐力
+      soil: まずまずの忍耐力
+      smile: 結構笑いやすい
+      laugh: よく笑いましたね
